--- a/app/src/main/res/layout/fragment_car_model.xml
+++ b/app/src/main/res/layout/fragment_car_model.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Model">
+    tools:context=".Model"
+    android:background="@drawable/bgcolor">
 
     <SurfaceView
         android:id="@+id/surface_view"
