--- a/app/src/main/res/values-notnight/theme.xml
+++ b/app/src/main/res/values-notnight/theme.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Dark.Theme.App1" parent="Theme.AppCompat.DayNight">
+    <style name="Light.Theme.app1" parent="Theme.AppCompat.DayNight.NoActionBar">
+
+
     </style>
     <style name="SCREEN">
         <item name="android:background">#000</item>
     </style>
     <style name="TEXT">
-        <item name="android:textColor">#FFF</item>
+        <item name="android:textColor">#000</item>
     </style>
     <style name="BUTTON">
         <item name="android:background">@android:color/holo_blue_dark</item>
         <item name="android:textColor">#FFF</item>
     </style>
-
 
 </resources>
