--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Light.Theme.app1" parent="Theme.AppCompat.DayNight.NoActionBar">
-
-
+    <style name="Base.Theme.App1" parent="Theme.AppCompat.DayNight">
     </style>
     <style name="SCREEN">
         <item name="android:background">#000</item>
     </style>
     <style name="TEXT">
-        <item name="android:textColor">#000</item>
+        <item name="android:textColor">#FFF</item>
     </style>
     <style name="BUTTON">
         <item name="android:background">@android:color/holo_blue_dark</item>
         <item name="android:textColor">#FFF</item>
     </style>
+
 
 </resources>
