--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,34 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    style="@style/Base.Theme.App1">
+    style="@style/SCREEN">
+
     <Button
         android:id="@+id/Register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="32dp"
-        android:text="Register"
+        android:layout_marginTop="24dp"
         android:background="@drawable/coustum_button"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/Login"
+        android:text="Register"
+        style="@style/BUTTON"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/Login"
-        app:layout_constraintTop_toTopOf="@+id/Login" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/Login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/coustum_button"
         android:text="Login"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/Register"
-        app:layout_constraintHorizontal_bias="0.5"
+        style="@style/BUTTON"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Password" />
 
@@ -49,6 +49,7 @@
         android:elevation="2dp"
         android:ems="10"
         android:hint="Password"
+        style="@style/TEXT"
 
         android:inputType="textPassword"
         android:padding="10dp"
@@ -62,6 +63,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="50dp"
+        style="@style/TEXT"
         android:layout_marginEnd="24dp"
         android:background="@drawable/coustum_input"
         android:drawableLeft="@android:drawable/sym_action_email"
@@ -80,18 +82,17 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="108dp"
         android:gravity="center_horizontal"
-        android:text="Login To Continue"
+        android:text="LOGIN TO CONTINUE"
         android:textAllCaps="false"
-        android:textColor="@android:color/holo_purple"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textStyle="bold"
+        style="@style/TEXT"
         app:layout_constraintEnd_toEndOf="@+id/Email"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/Email"
-        app:layout_constraintTop_toTopOf="parent"
- />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/google_button"
@@ -101,9 +102,37 @@
         android:src="@drawable/googleg_standard_color_18"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.248"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Login"
-        app:layout_constraintVertical_bias="0.508" />
+        app:layout_constraintTop_toBottomOf="@+id/Register" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="273dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="24dp"
+        android:text="OR"
+        android:textAlignment="center"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        style="@style/TEXT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Login" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="187dp"
+        android:layout_height="39dp"
+        android:text="Sign-in with Google"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.686"
+        style="@style/TEXT"
+        app:layout_constraintStart_toEndOf="@+id/google_button"
+        app:layout_constraintTop_toBottomOf="@+id/Register"
+        app:layout_constraintVertical_bias="0.554" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
