--- a/app/src/main/res/layout/activity_model.xml
+++ b/app/src/main/res/layout/activity_model.xml
@@ -6,9 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="false"
     tools:context=".Model"
+    style="@style/SCREEN"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/bgcolor">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
