--- a/app/src/main/res/layout/fragment_car_model.xml
+++ b/app/src/main/res/layout/fragment_car_model.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Model"
-    android:background="@drawable/bgcolor">
+    style="@style/SCREEN">
 
     <SurfaceView
         android:id="@+id/surface_view"
