--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -24,8 +24,7 @@
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/EmailRegister"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        style="@style/TEXT"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/EmailRegister"
@@ -44,7 +43,7 @@
         app:layout_constraintBottom_toTopOf="@+id/PasswordRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        style="@style/TEXT"/>
+        />
 
     <EditText
         android:id="@+id/PasswordRegister"
@@ -58,7 +57,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        style="@style/TEXT"
+
         android:minHeight="48dp"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
@@ -74,7 +73,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="52dp"
         android:background="@drawable/coustum_input"
-        style="@style/TEXT"
+
         android:elevation="2dp"
         android:ems="10"
         android:hint="Confirm Password"
@@ -88,17 +87,18 @@
 
     <TextView
         android:id="@+id/textView3"
+        style="@style/TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="56dp"
         android:text="ENTER THE DETAILS"
-        android:textAlignment="viewStart"
 
+        android:textAlignment="viewStart"
         android:textSize="30sp"
         android:textStyle="bold"
-        style="@style/TEXT"
         app:layout_constraintBottom_toTopOf="@+id/Name"
         app:layout_constraintEnd_toEndOf="@+id/Name"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="@+id/Name" />
 
     <EditText
@@ -108,7 +108,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        style="@style/TEXT"
+
         android:background="@drawable/coustum_input"
         android:elevation="2dp"
         android:ems="10"
@@ -123,18 +123,18 @@
 
     <Button
         android:id="@+id/Continue"
-        android:layout_width="0dp"
         style="@style/BUTTON"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="132dp"
         android:background="@drawable/coustum_button"
         android:text="Continue"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
