--- a/app/src/main/res/layout/activity_feedback_form.xml
+++ b/app/src/main/res/layout/activity_feedback_form.xml
@@ -12,7 +12,7 @@
         style="@style/TEXT"
         android:layout_width="363dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="236dp"
+        android:layout_marginTop="160dp"
         android:elevation="2dp"
         android:ems="10"
         android:hint="Email"
@@ -20,6 +20,7 @@
         android:minHeight="48dp"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
