--- a/app/src/main/res/values-notnight/themes.xml
+++ b/app/src/main/res/values-notnight/themes.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-   <style name="Base.Theme.App1" parent="Theme.AppCompat.DayNight.NoActionBar">
+   <style name="Base.Theme.App1" parent="Theme.AppCompat.DayNight">
 
 
     </style>
     <style name="SCREEN">
-        <item name="android:background">@drawable/bgcolor</item>
+        <item name="android:background">#FFF</item>
     </style>
     <style name="TEXT">
         <item name="android:textColor">#000</item>
